style.css
/* Importing Google Fonts */
@import url('https://fonts.googleapis.com/css?family=Fredoka+One|Lato:400,900');

/* Colours */
:root {
    --primary-color: rgb(220, 20, 60);
    --main-bg: rgb(217, 234, 250);
    --primary-hover: rgb(189, 15, 49);
    --primary-dark: rgb(107, 10, 30);
    --primary-light: rgb(255, 192, 205);
    --row-color: rgb(230, 230, 230);
    --row-hover: rgb(240, 240, 240);
    --placeholder-color: rgb(167, 167, 167);
    --row-font-color: darkslategrey;
    --row-font-color-hover: black;
    --sidebar-bg:  rgb(253, 253, 253);
}

/* Resetting Margin and Padding */
* {
    margin: 0;
    padding: 0;
}

/* Content */
body {
    font-family: 'Lato';
}

/* Navbar */
nav.navbar {
    display: relative;
    background-color: var(--primary-color);
    color: white;
}

nav h1 {
    font-family: 'Fredoka One';
    text-transform: uppercase;
    font-size: 1.7rem;
}

h1 > i.fa-check-circle {
    color: var(--primary-dark);
    font-weight: bold;
}

.fa-bars {
    cursor: pointer;
}

i {
    margin-left: 0rem;
    font-size: 1.5rem;
}

/* Navbar - Right Corner Icons */

.right-corner i {
    font-size: 1rem;
    transition: all .5s;
}
.right-corner i:hover {
    cursor: pointer;
    transition: all .5s;
}

/* Container */

/* div.container-fluid {
    position: relative;
} */

/* Container - Sidebar */

ul {
    list-style-type: none;
}

nav.sidebar {
    background-color: var(--sidebar-bg) !important;
    height: auto;
    border-right: 1px solid rgb(238, 238, 238);
}

ul.first-level li h2 i {
    font-size: 1.3rem;
    margin-right: 1rem;
}

ul.second-level li span i {
    margin-right: 2rem;
    font-size: 1rem;
}



ul.first-level > li {
    text-transform: uppercase;
    font-weight: bold;
}

li > h2 {
    color: var(--primary-color);
    text-decoration: none;
    font-size: 1rem;
    font-weight: bold;
}
ul.first-level li {
    padding: .9rem 0rem .5rem .7rem;
    color: var(--primary-color);
    cursor: pointer;
}

ul.first-level li:hover {
   background-color: var(--row-hover);
}

ul.second-level li {
    cursor: pointer; 
    margin: .5rem 0rem;   
    padding: .5rem 0rem;
    color: rgb(160, 158, 158);
}

ul.second-level li span {
    margin-left: 2rem;
    font-size: .9rem;
}

hr {
    margin: .5rem;
    padding: 0;
}

ul.second-level li:hover {
    color: darkslategrey;
    background-color: var(--row-hover);

}

/* Container - Sidebar - Categories */

.shopping {
    color: blue;
}

.work {
    color: orange;
}

.hobbies {
    color: green;
}

.health {
    color: purple;
}

/* Container - Main */



div.main {
    
    background-color: rgba(255,255,255,.5);
    background:url(round.png);
}

div.main h2 {
    font-weight: bold;
}

.main-tasks > div {
    background-color: var(--sidebar-bg);
    margin: 0rem 0rem 2rem 0rem;
    padding: 1.7rem;
}

.main-tasks h3 {
    font-weight: bold;
    text-transform: uppercase;
    font-size: 1.7rem;
}

.main-tasks h3 i {
    font-size: 1.7rem
}

.main-tasks li {
    border: 1px solid rgb(235, 235, 235);
    margin: .7rem 0rem;
    padding: .7rem;
    border-radius: .6rem;
    box-shadow: 1px 1px 3px rgba(0,0,0,.1);
    font-size: 1rem;
}

.main-tasks li i.fa-circle, .main-tasks li i.fa-trash, .main-tasks li i.fa-check-circle {
    font-size: 1rem;
}




.main-tasks .input-group {
    margin-top: 1.5rem;
}

input[type=text], .input-group-text {
    border-radius: 8rem;
    font-size: .9rem;
}

input[type=text]::placeholder {
    border-color: rgb(201,201,201);
    color: rgb(201, 201, 201);
    font-size: .9rem;
    }

.input-group-text i {
    font-size: 1rem;
}

.add-new-task {
    padding-bottom: 0.3rem;
}

.fa-trash {
    color: rgb(160, 158, 158);
}

.done {
    color: rgb(160, 158, 158);
}

.done span {
    text-decoration: line-through;
}

/* Bootstrap Responsive Breakpoints */
/* // Extra small devices (portrait phones, less than 576px)
// No media query for `xs` since this is the default in Bootstrap */

/* // Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) { 
    .main-tasks > div {
        padding: 2rem;
    }

    .main-tasks > div h3, .main-tasks > div i {
        font-size: 1.5rem;
    }
 }

/* // Medium devices (tablets, 768px and up) */
@media (min-width: 768px) { 
    .main-tasks > div {
        padding: 1rem .8rem;
    }

    .main-tasks > div h3, .main-tasks > div i {
        font-size: 1.1rem;
    }

    .main-tasks > div li {
        font-size: .8rem;
    }

    .main-tasks > div {
        padding: 1.5rem 1.2rem;
    }

    .main-tasks ul li span {
        margin: 0rem .6rem;
    }

    input[type=text], .input-group-text {
        border-radius: 8rem;
        font-size: .8rem;
    }
    
    input[type=text]::placeholder {
        border-color: rgb(201,201,201);
        color: rgb(201, 201, 201);
        font-size: .8rem;
        }
    
    .input-group-text i {
        font-size: .8rem;
    }

    ul.first-level h2 {
        font-size: .9rem;
    }

    ul.first-level li h2 i {
        font-size: .9rem;
    }
    ul.second-level li span {
        font-size: .8rem;
    }
 }

/* // Large devices (desktops, 992px and up) */
@media (min-width: 992px) { 
    .main-tasks > div {
        padding: 1rem .8rem;
    }

    .main-tasks > div h3, .main-tasks > div i {
        font-size: 1rem;
    }

    .main-tasks > div li {
        font-size: .8rem;
    }

    .main-tasks > div {
        padding: 1.5rem 1.2rem;
    }

    .main-tasks ul li span {
        margin: 0rem 1rem;
    }

    input[type=text], .input-group-text {
        border-radius: 8rem;
        font-size: .7rem;
    }
    
    input[type=text]::placeholder {
        border-color: rgb(201,201,201);
        color: rgb(201, 201, 201);
        font-size: .7rem;
        }
    
    .input-group-text i {
        font-size: .7rem;
    }

    ul.first-level h2 {
        font-size: 1.1rem;
    }

    ul.first-level li h2 i {
        font-size: 1.1rem;
    }
    ul.second-level li span {
        font-size: .9rem;
    }
    ul.second-level li span i {
        font-size: 1rem;
    }
 }

/* // Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
    .main-tasks > div h3, .main-tasks > div i {
        font-size: 1.4rem;
    }

    .main-tasks > div li {
        font-size: .9rem;
    }

    .main-tasks > div i {
        font-size: .9rem;
    }

    .main-tasks > div {
        padding: 1.5rem 1.2rem;
    }

    .main-tasks ul li span {
        margin: 0rem 1rem;
    }

    input[type=text], .input-group-text {
        border-radius: 8rem;
        font-size: .9rem;
    }
    
    input[type=text]::placeholder {
        border-color: rgb(201,201,201);
        color: rgb(201, 201, 201);
        font-size: .9rem;
        }
    
    .input-group-text i {
        font-size: .9rem;
    }
 }

